--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -79,7 +79,7 @@ construction of diverse and complex systems \citep{ArduinoComponents}. For the
 sake of comparison we will use the Arduino Uno, since this is the board being
 offered by the university.\nl
 
-The Arduino Uno consists of \Source:
+The Arduino Uno has the following technical specifications\citep{UNOSpecs}:
 
 \begin{itemize}
   \item ATmega328P processor 16 MHz clockfrequency
