--- a/sections/Sensors/sensorTheory.tex
+++ b/sections/Sensors/sensorTheory.tex
@@ -15,7 +15,7 @@ which will then be searched for. The colours are set using a program called
 will build a datalogical representation of the object consisting of a number of rectangles. Such a representation can be seen in
 \autoref{TwoBlobs2.PNG}. 
 
-\figx[0.70]{TwoBlobs2.PNG}{Visual representation of what the camera senses.}
+\figx[0.70]{TwoBlobs2.PNG}{Visual representation of the output from the camera.}
 
 For each identified rectangle, the camera outputs the coordinates for that
 rectangle's sides, top, bottom and colour. 
@@ -23,7 +23,7 @@ rectangle's sides, top, bottom and colour.
 Below are the technical specifications \citep[p. 1]{NXTCam} for the camera.
 \begin{itemize}
   \item Tracks up to 8 targets
-  \item Analyzes at 30 frames per second
+  \item Analyzes 30 frames per second
   \item Uses a resolution of 88x144 pixels
   \item Uses a standard NXT sensor port
   \item Resulting data consists of: number of objects, color of objects and
@@ -47,7 +47,7 @@ sensor's technical specifications \citep{Ultrasonic_sensor} can be found below.
   \item Has a max range of 2.5m
   \item Has a precision of +/- 3cm
   \item Looses precision after 1.5m
-  \item Has a 25ms delay between readings
+  \item Has a 15ms delay between readings
   \item Works best with large, hard-sized objects
   \item Each measurement outputs the distance in the form of a single integer
   with a value between 0 and 255cm
