--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -20,7 +20,7 @@
 \input{sections/Requirements/Requirements.tex}
 
 \part{Design}
-\input{sections/Design/TurretDesign.tex}
+\input{sections/Design/Design.tex}
 \part{Testing}
 %Physics of shooting
 %Turret design choises
